<?xml version="1.0"?>
<package format="3">
  <name>vk_ros2_driver</name>
  <version>0.0.1</version>
  <description>
    ROS2 driver package for receiving data from vk_sdk.
  </description>
  <author>Vilota Pte Ltd</author>
  <maintainer email="xingyu@vilota.ai">vilota</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
